--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,20 +5,23 @@ workflows:
   release:
     jobs:
       - test
-      - build
-        requires:
-          - test
-        filters:
-          branches:
-            only:
-              - master
-      - deploy
-        requires:
-          - build
-        filters:
-          branches:
-            only:
-              - master
+      - build:
+          requires:
+            - test
+          filters:
+            branches:
+              only:
+                - master
+      - deploy:
+          requires:
+            - test
+            - build
+          filters:
+            branches:
+              only:
+                - master
+
+
 jobs:
   test:
     docker:
