and again codeclimate will be the lest one a go

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,10 +29,10 @@ jobs:
     working_directory: /go/src/github.com/roger-russel/got-version
     steps:
       - checkout
-      - run:
-        name: Codeclimate
-        command: |
-          npm install -g codeclimate-test-reporter
+#      - run:
+#        name: Codeclimate
+#        command: |
+#          npm install -g codeclimate-test-reporter
 
       - run:
         name: Installing Dep
@@ -62,7 +62,7 @@ jobs:
         name: Sending Covarege Report
         command: |
           bash <(curl -s https://codecov.io/bash)
-          codeclimate-test-reporter < coverage.txt
+#          codeclimate-test-reporter < coverage.txt
 
       - persist_to_workspace:
           root: /go/src/github.com/roger-russel
